// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/classification/security-controls/SecurityControls should render SecurityControls multiple SecurityControlsItem when using FULL controlsFormat 1`] = `
<Fragment>
  <ul
    className="bdl-SecurityControls"
  >
    <SecurityControlsItem
      isRedesignEnabled={false}
      key="0"
      message={
        {
          "defaultMessage": "Shared links allowed for collaborators only.",
          "id": "boxui.securityControls.sharingCollabOnly",
        }
      }
    />
    <SecurityControlsItem
      isRedesignEnabled={false}
      key="1"
      message={
        {
          "defaultMessage": "External collaboration limited to approved domains.",
          "id": "boxui.securityControls.externalCollabDomainList",
        }
      }
    />
    <SecurityControlsItem
      isRedesignEnabled={false}
      key="2"
      message={
        {
          "defaultMessage": "Download restricted on Box Drive, except Owners/Co-Owners.",
          "id": "boxui.securityControls.desktopDownloadOwners",
        }
      }
    />
    <SecurityControlsItem
      isRedesignEnabled={false}
      key="3"
      message={
        {
          "defaultMessage": "Only select applications are allowed: {appNames}",
          "id": "boxui.securityControls.appDownloadWhitelist",
          "values": {
            "appNames": "App 1, App 2",
          },
        }
      }
    />
  </ul>
</Fragment>
`;

exports[`features/classification/security-controls/SecurityControls should render SecurityControls with single SecurityControlsItem and modal items when using SHORT_WITH_BTN controlsFormat and item, classification data is provided 1`] = `
<Fragment>
  <ul
    className="bdl-SecurityControls"
  >
    <SecurityControlsItem
      isRedesignEnabled={false}
      key="0"
      message={
        {
          "defaultMessage": "Sharing, download and app restrictions apply",
          "id": "boxui.securityControls.shortSharingDownloadApp",
        }
      }
    />
  </ul>
  <PlainButton
    className="lnk"
    onClick={[Function]}
    type="button"
  >
    <FormattedMessage
      defaultMessage="View All"
      id="boxui.securityControls.viewAll"
    />
  </PlainButton>
  <SecurityControlsModal
    classificationName="internal only"
    closeModal={[Function]}
    definition="classification definition"
    isSecurityControlsModalOpen={false}
    itemName="welcome.pdf"
    modalItems={
      [
        {
          "message": {
            "defaultMessage": "Shared links allowed for collaborators only.",
            "id": "boxui.securityControls.sharingCollabOnly",
          },
        },
        {
          "message": {
            "defaultMessage": "External collaboration limited to approved domains.",
            "id": "boxui.securityControls.externalCollabDomainList",
          },
        },
        {
          "message": {
            "defaultMessage": "Download restricted on Box Drive, except Owners/Co-Owners.",
            "id": "boxui.securityControls.desktopDownloadOwners",
          },
        },
        {
          "message": {
            "defaultMessage": "Only select applications are allowed: {appNames}",
            "id": "boxui.securityControls.appDownloadWhitelist",
            "values": {
              "appNames": "App 1, App 2",
            },
          },
        },
      ]
    }
  />
</Fragment>
`;

exports[`features/classification/security-controls/SecurityControls should render SecurityControls with single SecurityControlsItem when using SHORT controlsFormat 1`] = `
<Fragment>
  <ul
    className="bdl-SecurityControls"
  >
    <SecurityControlsItem
      isRedesignEnabled={false}
      key="0"
      message={
        {
          "defaultMessage": "Sharing, download and app restrictions apply",
          "id": "boxui.securityControls.shortSharingDownloadApp",
        }
      }
    />
  </ul>
</Fragment>
`;
